[gd_scene load_steps=2 format=3 uid="uid://modal001"]

[ext_resource type="Script" path="res://src/ui/components/Modal.gd" id="1_modal"]

[node name="Modal" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_modal")

[node name="Overlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.6)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="PanelContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(300, 150)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/Panel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="TitleLabel" type="Label" parent="CenterContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.9, 0.7, 1)
theme_override_font_sizes/font_size = 18
text = "Modal Title"
horizontal_alignment = 1

[node name="ContentLabel" type="RichTextLabel" parent="CenterContainer/Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(260, 60)
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "Modal content goes here."
fit_content = true
scroll_active = false

[node name="ButtonsContainer" type="HBoxContainer" parent="CenterContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
alignment = 1
